--- a/module4-logistic-regression/Khislat_Zhuraeva_LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/Khislat_Zhuraeva_LS_DS_214_assignment.ipynb
@@ -199,16 +199,16 @@
       "metadata": {
         "id": "ncvHilk3rv3G",
         "colab_type": "code",
+        "outputId": "67b91794-72d0-4c30-e130-05e1fc9f202c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 176
-        },
-        "outputId": "0af6ee9b-1c91-4fd7-9952-dcd0f5197b37"
+        }
       },
       "source": [
         "df.head(3)"
       ],
-      "execution_count": 387,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 387
+          "execution_count": 8
         }
       ]
     },
@@ -505,16 +505,16 @@
       "metadata": {
         "id": "ySf61nDStpb_",
         "colab_type": "code",
+        "outputId": "763f87ad-b138-45c2-a479-de49955b1399",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b71f3be2-b360-429a-b166-e75981c35edd"
+        }
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 388,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +526,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 388
+          "execution_count": 9
         }
       ]
     },
@@ -548,11 +548,11 @@
       "metadata": {
         "id": "KUQwMKA6trts",
         "colab_type": "code",
+        "outputId": "ae0df5e1-dcc5-4e90-e35e-3bc07bc7fdbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0b103eaa-580c-4734-b038-7561b319d4b0"
+        }
       },
       "source": [
         "train = df[df['Date']<='12/31/2016']\n",
@@ -560,7 +560,7 @@
         "test = df[df['Date']>='01/01/2018']\n",
         "train.shape, val.shape, test.shape"
       ],
-      "execution_count": 390,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 390
+          "execution_count": 11
         }
       ]
     },
@@ -581,16 +581,16 @@
       "metadata": {
         "id": "15vzYUoMCaUM",
         "colab_type": "code",
+        "outputId": "2cfd9c28-6a6e-47c3-92a3-8a93c54269d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "68fdea9e-b70d-4eca-c08f-216bb1fb7943"
+        }
       },
       "source": [
         "df['Great'].dtypes"
       ],
-      "execution_count": 391,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -602,7 +602,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 391
+          "execution_count": 12
         }
       ]
     },
@@ -611,18 +611,18 @@
       "metadata": {
         "id": "q42LtYRZ5tZ7",
         "colab_type": "code",
+        "outputId": "0efb3796-c60b-4626-f816-5609727f0bda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "b971baad-91e3-4455-ad05-40142292e082"
+        }
       },
       "source": [
         "target = 'Great'\n",
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True) "
       ],
-      "execution_count": 392,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 392
+          "execution_count": 13
         }
       ]
     },
@@ -659,11 +659,11 @@
       "metadata": {
         "id": "J99OdzeKHVB-",
         "colab_type": "code",
+        "outputId": "d0867666-755e-4500-d790-78274ea7f0b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "19d28a4b-6434-4ac3-f8ca-3c5f1123b906"
+        }
       },
       "source": [
         "### Training accuracy of majority class baseline = \n",
@@ -671,7 +671,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 394,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 394
+          "execution_count": 15
         }
       ]
     },
@@ -692,11 +692,11 @@
       "metadata": {
         "id": "W8wPo0N7HkYz",
         "colab_type": "code",
+        "outputId": "62ba0a40-a84d-45a3-9505-184d35fbbf80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7cedcf88-ed9c-41da-c7f8-62764c4cfa1e"
+        }
       },
       "source": [
         "### Validation accuracy of majority class baseline = \n",
@@ -705,7 +705,7 @@
         "y_pred = [majority_class]*len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 395,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -717,7 +717,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 395
+          "execution_count": 16
         }
       ]
     },
@@ -726,16 +726,16 @@
       "metadata": {
         "id": "vXsYEkCDYFQr",
         "colab_type": "code",
+        "outputId": "11b91f53-b986-4fdf-c7fd-10ac7739f7a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        },
-        "outputId": "99933c84-a383-42e7-c893-ae82ad7fb576"
+        }
       },
       "source": [
         "train.describe().head(4)\n"
       ],
-      "execution_count": 396,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +886,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 396
+          "execution_count": 17
         }
       ]
     },
@@ -921,11 +921,11 @@
       "metadata": {
         "id": "nmEa1ikirdZJ",
         "colab_type": "code",
+        "outputId": "3fb96c01-e340-4905-ba10-563973e85499",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        },
-        "outputId": "48045aad-a1f5-4704-f253-91b7f5faec4e"
+        }
       },
       "source": [
         "# 4. Fit the model\n",
@@ -935,7 +935,7 @@
         "y_pred = log_reg.predict(X_val_imputed)\n",
         "print('Validation Accuracy', accuracy_score(y_pred, y_val))\n"
       ],
-      "execution_count": 398,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -966,17 +966,17 @@
       "metadata": {
         "id": "lMwwNBWicLyi",
         "colab_type": "code",
+        "outputId": "09b9c75d-e379-4d23-cee3-cd90e06e1f10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
-        },
-        "outputId": "7d2721b0-1322-4846-ef53-26d7e2f225c6"
+        }
       },
       "source": [
         "#The predictions look like this\n",
         "log_reg.predict(X_val_imputed)"
       ],
-      "execution_count": 399,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +997,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 399
+          "execution_count": 20
         }
       ]
     },
@@ -1019,17 +1019,17 @@
       "metadata": {
         "id": "zbd2ve4GcL3a",
         "colab_type": "code",
+        "outputId": "5524ba41-1a22-445e-c1f8-dc6d97091015",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b552fab4-99fd-4af0-e08c-b84ddc42b98a"
+        }
       },
       "source": [
         "log_reg.predict(test_case)\n",
         "log_reg.predict_proba(test_case)[0]"
       ],
-      "execution_count": 401,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1041,7 +1041,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 401
+          "execution_count": 22
         }
       ]
     },
@@ -1050,16 +1050,16 @@
       "metadata": {
         "id": "Qc_Wy6h5nob4",
         "colab_type": "code",
+        "outputId": "0c675e32-71f5-4502-a698-f99284b582c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bdba26d0-6b9f-46a7-81e4-46fc019c3137"
+        }
       },
       "source": [
         "log_reg.intercept_"
       ],
-      "execution_count": 402,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1071,7 +1071,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 402
+          "execution_count": 23
         }
       ]
     },
@@ -1097,16 +1097,16 @@
       "metadata": {
         "id": "6A8PluiqnyYM",
         "colab_type": "code",
+        "outputId": "023ef137-a90e-4768-857c-77854b8f9acd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "db439cb1-8272-4d60-9776-5d6cbc7dfb8c"
+        }
       },
       "source": [
         "sigmoid(log_reg.intercept_ + np.dot(log_reg.coef_, np.transpose(test_case)))"
       ],
-      "execution_count": 404,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1118,7 +1118,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 404
+          "execution_count": 25
         }
       ]
     },
@@ -1127,16 +1127,16 @@
       "metadata": {
         "id": "AUfRROV3nzWL",
         "colab_type": "code",
+        "outputId": "5af2b185-1c5e-4171-c437-ee264cbd7884",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e464b736-c269-4f76-9356-4fff3eaeb591"
+        }
       },
       "source": [
         "1 - sigmoid(log_reg.intercept_ + np.dot(log_reg.coef_, np.transpose(test_case)))"
       ],
-      "execution_count": 405,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1148,44 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 405
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pUHDBK07qcsH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "71dd02ea-7a25-46ba-967b-53dcf43dac71"
+      },
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.linear_model import LogisticRegressionCV\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "\n",
+        "model = LogisticRegressionCV(cv=5, n_jobs=-1, random_state=42)\n",
+        "model.fit(X_train_scaled, y_train);\n",
+        "X_test_imputed = imputer.transform(X_test)\n",
+        "X_test_scaled = scaler.transform(X_test_imputed)\n",
+        "print('Test Accuracy', model.score(X_test_scaled, y_test))"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy 0.7894736842105263\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
